removed resume, updated modal title

--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
             <div class="column">
               <h1 class="title is-1 black">Haydar Hamieh</h1>
               <h2 class="subtitle">FullStack Developer, Beirut, Lebanon</h2>
-              <p>
+              <!-- <p>
                 <a href="docs/resume.txt" class="icon fix">
                   <i class="fas fa-file-word"></i> <strong>Resume</strong>
                 </a>
-              </p>
+              </p> -->
             </div>
           </div>
         </div>
@@ -594,10 +594,10 @@
             <p>
               This flappy bird clone was entirely built with vanilla HTML, CSS
               and JavaScript. The game simultaneously moves the pipes, checks
-              for collisions, handle bird phyics, and calculate best option for
-              the AI while keeping track of both score counters, on a single
-              event loop! This project is truly a show of force of the power of
-              JavaScript, when written correctly.
+              for collisions, handles the birds' physics, and calculates the
+              best option for the AI while keeping track of both score counters,
+              on a single event loop! This project is truly a show of force of
+              the power of JavaScript, when written correctly.
             </p>
 
             <div class="tags">
